First crack at getting elabinelab attributes (options) from end to end.
Add all the NS parsing and DB foo.

--- a/db/Experiment.pm.in
+++ b/db/Experiment.pm.in
@@ -108,6 +108,7 @@ my $EXPT_RESOURCESHOSED = 0;
 		   "event_groups",
 		   "virt_firewalls",
 		   "firewall_rules",
+		   "elabinelab_attributes",
 		   "virt_tiptunnels",
 		   "ipsubnets");
 
