--- a/tbsetup/ns2ir/sim.tcl.in
+++ b/tbsetup/ns2ir/sim.tcl.in
@@ -1,7 +1,7 @@
 # -*- tcl -*-
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2007 University of Utah and the Flux Group.
+# Copyright (c) 2000-2007, 2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -398,6 +398,7 @@ Simulator instproc run {} {
     var_import ::GLOBALS::elabinelab_eid
     var_import ::GLOBALS::elabinelab_cvstag
     var_import ::GLOBALS::elabinelab_singlenet
+    var_import ::TBCOMPAT::elabinelab_attributes
     var_import ::GLOBALS::security_level
     var_import ::GLOBALS::explicit_firewall
     var_import ::GLOBALS::sourcefile_list
@@ -698,6 +699,19 @@ Simulator instproc run {} {
 	
     foreach sourcefile $sourcefile_list {
 	$self spitxml_data "external_sourcefiles" [list "pathname" ] [list $sourcefile ]
+    }
+
+    if {$elab_in_elab} {
+	foreach attr $elabinelab_attributes {
+	    set fields [list "role" "attrkey" "attrvalue" "order"]
+	    set values [split $attr ","]
+
+	    # XXX this shouldn't be needed
+	    lappend fields [list "pid" "eid"]
+	    lappend values [list $pid $eid]
+
+	    $self spitxml_data "elabinelab_attributes" $fields $values
+	}
     }
 
     $self spitxml_finish
