Minor parser change to preserve DB unique key.
If new elabinelab_attribute has same role/key/order, replace any existing
such element.  This preserves what we have set in the DB as the unique key.

--- a/tbsetup/ns2ir/tb_compat.tcl.in
+++ b/tbsetup/ns2ir/tb_compat.tcl.in
@@ -1782,6 +1782,15 @@ proc tb-set-elabinelab-attribute {role key value {order 0}} {
 	perror "\[tb-set-elabinelab-attribute] - \"$order\" is not a valid elabinelab order"
 	return
     }
+
+    #
+    # If role/key/ordering exactly matches an existing value, replace it
+    # otherwise just add it.
+    #
+    set i [lsearch -glob $elabinelab_attributes "$role,$key,*,$order"]
+    if {$i > -1} {
+	set elabinelab_attributes [lreplace $elabinelab_attributes $i $i]
+    }
     lappend elabinelab_attributes "$role,$key,$value,$order"
 }
 
