--- a/tbsetup/ns2ir/tb_compat.tcl.in
+++ b/tbsetup/ns2ir/tb_compat.tcl.in
@@ -133,7 +133,7 @@ namespace eval TBCOMPAT {
     # Elabinelab attribute stuff.
     variable elabinelab_attributes
     set elabinelab_attributes {}
-    variable EINEROLE  {^(boss|ops|fs|router|node)$}
+    variable EINEROLE  {^(all|boss|ops|fs|router|node)$}
     variable EINEKEY   {^([-\w\.]+)$}
     variable EINEVALUE {^([-\w\.\+\,\s\/]+)$}
     variable EINEORDER {^\d+$}
@@ -1756,10 +1756,20 @@ proc tb-elabinelab-singlenet {args} {
 
 #
 # Set/clear elabinelab attributes:
-#    tb-set-elabinelab-attribute <role> <key> <value> [<order>]
-#    tb-unset-elabinelab-attribute <role> <key>
+#    tb-set-elabinelab-attribute <key> <value> [<order>]
+#    tb-unset-elabinelab-attribute <key>
+#    tb-set-elabinelab-role-attribute <role> <key> <value> [<order>]
+#    tb-unset-elabinelab-role-attribute <role> <key>
 #
-proc tb-set-elabinelab-attribute {role key value {order 0}} {
+proc tb-set-elabinelab-attribute {key value {order 0}} {
+    tb-set-elabinelab-role-attribute "all" $key $value $order
+}
+
+proc tb-unset-elabinelab-attribute {key} {
+    tb-unset-elabinelab-role-attribute "all" $key
+}
+
+proc tb-set-elabinelab-role-attribute {role key value {order 0}} {
     var_import ::TBCOMPAT::EINEROLE;
     var_import ::TBCOMPAT::EINEKEY;
     var_import ::TBCOMPAT::EINEVALUE;
@@ -1783,18 +1793,26 @@ proc tb-set-elabinelab-attribute {role key value {order 0}} {
 	return
     }
 
-    #
-    # If role/key/ordering exactly matches an existing value, replace it
-    # otherwise just add it.
-    #
-    set i [lsearch -glob $elabinelab_attributes "$role,$key,*,$order"]
-    if {$i > -1} {
-	set elabinelab_attributes [lreplace $elabinelab_attributes $i $i]
+    if {$role == "all"} {
+	set roles {"boss" "ops" "fs" "router" "node"}
+    } else {
+	set roles $role
     }
-    lappend elabinelab_attributes "$role,$key,$value,$order"
+
+    foreach r $roles {
+	#
+	# If role/key/ordering exactly matches an existing value,
+	# replace it to preserve uniqueness, otherwise just add it.
+	#
+	set i [lsearch -glob $elabinelab_attributes "$r,$key,*,$order"]
+	if {$i > -1} {
+	    set elabinelab_attributes [lreplace $elabinelab_attributes $i $i]
+	}
+	lappend elabinelab_attributes "$r,$key,$value,$order"
+    }
 }
 
-proc tb-unset-elabinelab-attribute {role key} {
+proc tb-unset-elabinelab-role-attribute {role key} {
     var_import ::TBCOMPAT::EINEROLE;
     var_import ::TBCOMPAT::EINEKEY;
     var_import ::TBCOMPAT::elabinelab_attributes;
@@ -1807,9 +1825,17 @@ proc tb-unset-elabinelab-attribute {role key} {
 	perror "\[tb-unset-elabinelab-attribute] - \"$key\" is not a valid elabinelab key"
 	return
     }
-    while {[lsearch -glob $elabinelab_attributes "$role,$key,*"] > -1} {
-	set i [lsearch -glob $elabinelab_attributes "$role,$key,*"]
-	set elabinelab_attributes [lreplace $elabinelab_attributes $i $i]
+    if {$role == "all"} {
+	set roles {"boss" "ops" "fs" "router" "node"}
+    } else {
+	set roles $role
+    }
+
+    foreach r $roles {
+	while {[lsearch -glob $elabinelab_attributes "$r,$key,*"] > -1} {
+	    set i [lsearch -glob $elabinelab_attributes "$r,$key,*"]
+	    set elabinelab_attributes [lreplace $elabinelab_attributes $i $i]
+	}
     }
 }
 
