Initial GENI AM API implementation.
Added GENI_AM_SUPPORT to configure. protogeni-cm.pl honors
GENI_AM_SUPPORT by invoking GeniAM.pm functions instead of GeniCM.pm
functions. Only GetVersion is implemented.

--- a/configure.in
+++ b/configure.in
@@ -213,6 +213,7 @@ AC_SUBST(REMOTEWIKIDOCS)
 AC_SUBST(PROTOGENI_SUPPORT)
 AC_SUBST(PROTOGENI_CLEARINGHOUSE)
 AC_SUBST(PROTOGENI_DOMAIN)
+AC_SUBST(GENI_AM_SUPPORT)
 AC_SUBST(STANDALONE_CLEARINGHOUSE)
 AC_SUBST(GMAP_API_KEY)
 AC_SUBST(NODE_USAGE_SUPPORT)
@@ -300,6 +301,7 @@ REMOTEWIKIDOCS=1
 PROTOGENI_SUPPORT=0
 PROTOGENI_CLEARINGHOUSE=0
 PROTOGENI_DOMAIN="unknown"
+GENI_AM_SUPPORT=0
 STANDALONE_CLEARINGHOUSE=0
 NODE_USAGE_SUPPORT=0
 NOSTACKMIB=0
