--- a/protogeni/xmlrpc/protogeni-cm.pl.in
+++ b/protogeni/xmlrpc/protogeni-cm.pl.in
@@ -148,6 +148,7 @@ Genixmlrpc->SetContext(Genixmlrpc->Context($certificate));
 if ($GENI_AM_SUPPORT) {
     $responder = Frontier::Responder->new( "methods" => {
 	"GetVersion"        => \&GeniAM::GetVersion,
+	"ListResources"     => \&GeniAM::ListResources,
     },);
 }
 elsif ($VERSION eq "1.0") {
