--- a/protogeni/xmlrpc/GNUmakefile.in
+++ b/protogeni/xmlrpc/GNUmakefile.in
@@ -21,7 +21,7 @@ SETUID_LIBX_SCRIPTS  =
 # configure if the .in file is changed.
 # 
 all:	protogeni-cm.pl protogeni-ch.pl protogeni-sa.pl protogeni-ses.pl \
-	Genixmlrpc.pm GeniResponse.pm 
+	Genixmlrpc.pm GeniResponse.pm geni-am.pl
 
 include $(TESTBED_SRCDIR)/GNUmakerules
 
@@ -33,7 +33,8 @@ install-libs: $(INSTALL_LIBDIR)/Genixmlrpc.pm \
 install-scripts: $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-sa.pl \
 		$(INSTALL_DIR)/protogeni/xmlrpc/protogeni-cm.pl \
 		$(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ch.pl \
-		$(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ses.pl
+		$(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ses.pl \
+		$(INSTALL_DIR)/protogeni/xmlrpc/geni-am.pl
 	$(SUDO) chown root $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-sa.pl
 	$(SUDO) chmod u+s  $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-sa.pl
 	$(SUDO) chown root $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ch.pl
@@ -42,6 +43,8 @@ install-scripts: $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-sa.pl \
 	$(SUDO) chmod u+s  $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-cm.pl
 	$(SUDO) chown root $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ses.pl
 	$(SUDO) chmod u+s  $(INSTALL_DIR)/protogeni/xmlrpc/protogeni-ses.pl
+	$(SUDO) chown root $(INSTALL_DIR)/protogeni/xmlrpc/geni-am.pl
+	$(SUDO) chmod u+s  $(INSTALL_DIR)/protogeni/xmlrpc/geni-am.pl
 
 install: install-libs install-scripts
 
