Changes for speeding up elabinelab server setup.
Boss/ops/fs: reboot them together after setup rather than serially.

Nodes: leave them in PXEWAIT throughout the setup, until after boss has
been rebooted.  At that point we send them the new bootinfo RESTART command
telling pxeboot to re-DHCP and use the new info obtained (next-server) to
contact a potentially new boss node.  This is a quick way to switch a node
in PXEWAIT from talking to the outer boss to talking to the inner one.

A significant number of rinky-dink changes were needed to do this, primarily
adding a new state, PXELIMBO, where nodes can be sent to sit until they are
restarted.  It turns out, just putting them in an existing state such as
PXEWAKEUP or SHUTDOWN wouldn't work, as they tend to timeout or otherwise
reboot.

--- a/db/elabinelab_bossinit.in
+++ b/db/elabinelab_bossinit.in
@@ -247,6 +247,7 @@ if (1) {
     # Now symlink all the alternate boots to pxeboot.emu
     # XXX we assume everything is at the top level of /tftpboot right now.
     #
+    $EUID = 0;
     foreach my $boot (@bogoboots) {
 	if ($boot =~ /^\/tftpboot\/([^\/]+)$/) {
 	    $boot = $1;
@@ -259,6 +260,7 @@ if (1) {
 	    }
 	}
     }
+    $EUID = $UID;
 
     #
     # Remake the dhcpd.conf file to reflect any pxeboot change.
