--- a/tbsetup/tbswap.in
+++ b/tbsetup/tbswap.in
@@ -1422,12 +1422,17 @@ sub doSwapin($) {
     #
     # Do linktest if user requested it at swapin.
     #
+    # We don't run linktest on elabinelabs since there may be no network
+    # (i.e., in the "single control network" case) and inner nodes are
+    # going to be sitting in PXEWAIT.
+    #
     my $query_result =
 	DBQueryFatal("select linktest_level,linktest_pid from experiments ".
 		     "where pid='$pid' and eid='$eid'");
     my ($linktest_level,$linktest_pid) = $query_result->fetchrow_array();
 
-    if ($linktest_level && ($type == REAL || $type == MODIFY)) {
+    if (!$elabinelab && $linktest_level &&
+	($type == REAL || $type == MODIFY)) {
 	if ($linktest_pid) {
 	    tbwarn "Linktest is already running! $linktest_pid";
 	}
