--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -102,7 +102,7 @@ use vars qw(@ISA @EXPORT);
 	 TBDB_NODESTATE_RELOADDONE TBDB_NODESTATE_RELOADDONE_V2
 	 TBDB_NODESTATE_UNKNOWN
 	 TBDB_NODESTATE_PXEWAIT TBDB_NODESTATE_PXEWAKEUP
-	 TBDB_NODESTATE_PXEFAILED
+	 TBDB_NODESTATE_PXEFAILED TBDB_NODESTATE_PXELIMBO
 	 TBDB_NODESTATE_PXEBOOTING TBDB_NODESTATE_ALWAYSUP
 	 TBDB_NODESTATE_MFSSETUP TBDB_NODESTATE_TBFAILED
 	 TBDB_NODESTATE_POWEROFF
@@ -485,6 +485,7 @@ sub TBDB_NODESTATE_RELOADDONE()	{ "RELOADDONE"; }
 sub TBDB_NODESTATE_RELOADDONE_V2(){ "RELOADDONEV2"; }
 sub TBDB_NODESTATE_UNKNOWN()	{ "UNKNOWN"; };
 sub TBDB_NODESTATE_PXEWAIT()	{ "PXEWAIT"; }
+sub TBDB_NODESTATE_PXELIMBO()	{ "PXELIMBO"; }
 sub TBDB_NODESTATE_PXEWAKEUP()	{ "PXEWAKEUP"; }
 sub TBDB_NODESTATE_PXEFAILED()	{ "PXEFAILED"; }
 sub TBDB_NODESTATE_PXEBOOTING()	{ "PXEBOOTING"; }
@@ -2748,13 +2749,15 @@ sub TBNodeStateWait ($$$$@) {
 	$waittime = time - $waitstart;
 	if ($waittime > $maxwait) {
 	    $minutes = int($waittime / 60);
-	    print "*** Giving up on $pc - it's been $minutes minute(s).\n";
+	    print "*** Giving up on $pc ($state) - ",
+	          "it's been $minutes minute(s).\n";
 	    TBNodeConsoleTail($pc, *STDOUT);
 	    return 1;
 	}
 	if (int($waittime / 60) > $minutes) {
 	    $minutes = int($waittime / 60);
-	    print "Still waiting for $pc - it's been $minutes minute(s).\n";
+	    print "Still waiting for $pc ($state) - ",
+	          "it's been $minutes minute(s).\n";
 	}
 	sleep(1);
     }
